--- a/code/master_code.Rmd
+++ b/code/master_code.Rmd
@@ -1,10 +1,7 @@
 ---
 title: "Data Science Project"
 author: "Group 3:
-          Ingri Quevedo
-          Hussein Youssef
-          Hosam Alghuwairi
-          Mohammed Saad B Al Alshaykh "
+          Ingri Quevedo - Hussein Youssef - Hosam Alghuwairi - Mohammed Saad B Al Alshaykh "
 date: "2025-11-30"
 output:
    rmdformats::readthedown:
